--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,12 +5,16 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+    /* сохраните этот селектор в приведённом виде.
+      Так стили написанные ниже будут иметь больший вес,
+      чем стили в медиазапросе предпочтений пользователя
+    */
+    --page-header-menu-hover-color: rgb(255 0 112 / 0.4);
+    --main-text-color: #f1b2ce;
+    --background-color: #000028;
+    --header-color: #ff0070;
+    --block-header-color: #000028;
+    --decorative-elements: #ff0070;
+    --block-color: #ff0070;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-}
