--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,317 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-size: 18px;
+    color: var(--main-text-color, #f1b2ce);
+    line-height: 130%;
+    background-color: var(--background-color, #000028);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 0 10px;
+}
+
+.page-header {
+    position: relative;
+    display: grid;
+    grid-template-areas:
+    'nav nav'
+    'logo logo'
+    'paragraph paragraph';
+    grid-template-rows: 1fr min-content 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+
+.page-header .decorated-header {
+    text-shadow: 4px 4px 0 #ff0070;
+    grid-area: logo;
+    align-self: center;
+}
+
+.page-header .block-header {
+    grid-area: paragraph;
+    align-self: center;
+    font-weight: bold;
+}
+
+.header__theme-menu {
+    grid-area: nav;
+    align-self: center;
+    justify-self: end;
+    color: var(--decorative-elements);
+}
+
+.header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.header__theme-menu-button {
+    inline-size: 70px;
+    block-size: 26px;
+    padding: 0 12.4px;
+    background-color: transparent;
+    border: none;
+    text-transform: lowercase;
+    line-height: 100%;
+    font-size: inherit;
+    cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+    outline: 1px solid var(--page-header-menu-hover-color, rgb(255 0 112 / 0.4));
+}
+
+.header__theme-menu-button:focus {
+    outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+    border-block-end: 1px solid var(--decorative-elements, #ff0070);
+    outline: none;
+}
+
+.header__theme-menu-button_active {
+    border: 1px solid var(--decorative-elements, #ff0070);
+    pointer-events: none;
+}
+
+.decorated-zone {
+    position: relative;
+    min-block-size: 100vb;
+    padding: 10px;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+    content: '';
+    position: absolute;
+    display: inline-block;
+    block-size: 25px;
+    inline-size: 25px;
+}
+
+.decorated-zone::before {
+    inset-block-start: 10px;
+    inset-inline-end: 10px;
+    border-inline-end: 1px solid var(--decorative-elements, #ff0070);
+    border-block-start: 1px solid var(--decorative-elements, #ff0070);
+}
+
+.decorated-zone::after {
+    inset-block-end: 10px;
+    inset-inline-start: 10px;
+    border-inline-start: 1px solid var(--decorative-elements, #ff0070);
+    border-block-end: 1px solid var(--decorative-elements, #ff0070);
+}
+
+.header {
+    color: var(--header-color, #ff0070);
+    font-size: inherit;
+}
+
+.decorated-header {
+    color: #db00ff;
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 82.5%;
+}
+
+.block-header {
+    color: var(--block-header-color, #000028);
+    font-size: inherit;
+    background-color: var(--block-color, #ff0070);
+}
+
+.header__element {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    inset-inline-end: 10px;
+    inset-block-start: 10px;
+    color: var(--decorative-elements, #ff0070);
+}
+
+.header__element::after {
+    content: '';
+    display: inline-block;
+    margin: 9px;
+    background-color: var(--decorative-elements, #ff0070);
+    border-radius: 50%;
+    box-shadow: 0 0 4px 3px var(--decorative-elements, #ff0070);
+    block-size: 9px;
+    inline-size: 9px;
+}
+
+.table {
+    display: grid;
+    gap: 20px;
+}
+
+.article {
+    display: grid;
+    gap: 20px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.humble-header {
+    font-weight: normal;
+}
+
+.card-link {
+    text-decoration: none;
+    text-shadow: 2px 2px 0 var(--block-color, #ff0070);
+}
+
+.card-link:hover {
+    border-block-end: 1px solid #ff0070;
+}
+
+.card-link:focus {
+    outline: none;
+}
+
+.card-link:focus-visible {
+    outline: 1px solid #ff0070;
+    appearance: none;
+}
+
+.image-gallery {
+    display: grid;
+    gap: 10px;
+}
+
+.gallery-container {
+    display: grid;
+    gap: 10px;
+}
+
+.gallery-image {
+    display: block;
+    inline-size: 100%;
+    block-size: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer .decorated-header {
+    text-shadow: 2px 2px 0 #ff0070;
+}
+
+@media (width >=768px) {
+
+    .page {
+        gap: 60px;
+    }
+
+    .main {
+        padding: 0 20px;
+        gap: 80px;
+    }
+
+    .page-header {
+        grid-template-areas:
+      'nav nav'
+      'logo logo'
+      '. paragraph';
+    }
+
+    .page-header .decorated-header {
+        margin-inline-start: -20px;
+    }
+
+    .header__decorated-element {
+        inset-inline-end: 20px;
+        inset-block-start: 20px;
+    }
+
+    .column-table {
+        grid-template-columns: 1fr 2fr;
+    }
+
+    .row-table {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .row-table .article {
+        grid-row: 2;
+        grid-column: span 3;
+    }
+
+    .image-gallery {
+        gap: 20px;
+    }
+
+    .gallery-container {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+
+    .vertical-image {
+        grid-row: span 2;
+    }
+
+    .horizontal-image {
+        grid-column: span 2;
+    }
+
+    .decorated-zone {
+        padding: 20px;
+    }
+
+    .decorated-zone::before {
+        inset-block-start: 20px;
+        inset-inline-end: 20px;
+    }
+
+    .decorated-zone::after {
+        inset-block-end: 20px;
+        inset-inline-start: 20px;
+    }
+}
+
+@media (width >=1024px) {
+
+    .header__theme-menu {
+        align-self: start;
+        justify-self: center;
+    }
+
+    .header__theme-menu-list {
+        flex-direction: row;
+    }
+
+    .row-table .article {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .column-table {
+        gap: 10px;
+    }
+
+    .decorated-header {
+        font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
+    }
 }
